small fix to spacing of blog about section

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -48,13 +48,13 @@
 	}
 	.text-container {
 		position: absolute;
-		top: 13rem;
+		top: 15rem;
 		padding: 0 0 0 10rem;
 	}
 	.image-container {
 		position: absolute;
 		right: 0;
-		top: 22rem;
+		top: 18rem;
 		width: 49.3rem;
 		img {
 			box-shadow: -1rem 1.2rem $clr-sunny-yellow;
